Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28074

QML Runtime projects not working on remote targets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • Qt Creator 8.0.1
    • None
    • Linux/X11, Windows
    • d72661554 (master), f9e373bba (master), 041c59e90 (master), 5c7c102f3 (master), e7b4ccf60 (qds/dev)

    Description

      Trying to run QML Runtime projects (.qmlproject) on a remote target (either Generic Remote Linux or Boot2Qt Device) fails and QtCreator tries to run the project on the local host.

       

      09:05:30: Starting qmlscene /home/sapiippo/Qt/test/untitled-quickproject/untitled-quickproject.qml...
      qmlscene: could not find a Qt installation of ''
      
      09:05:30: qmlscene exited with code 109:06:35: Starting /usr/bin/appcontroller qmlscene /home/sapiippo/Qt/test/untitled-quickproject/untitled-quickproject.qml...
      09:06:35: The process failed to start. Either the invoked program "/usr/bin/appcontroller" is missing, or you may have insufficient permissions to invoke the program.
       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hjk hjk
              sapiippo Samuli Piippo
              Votes:
              2 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: