QmlProjectManager: Change/Fix logic to find qml runtime

Fixes: QTCREATORBUG-28074
Change-Id: I3f51eb13cce8c1cade3f337f01a9aaa77f431ba4